...
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/eventlist"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventlist"
        android:text="Eventual Time..."
        />

    <Button
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintRight_toRightOf="parent"
...
